xxl-job/kubernetes/xxl-job-admin-deloy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: xxl-job-admin
  namespace: default
spec:
  template:
    metadata:
      labels:
        app: xxl-job-admin
    spec:
      containers:
      - name: xxl-job-admin
        image: slpcat/xxl-job:v2.3.0
        ports:
        - containerPort: 8080
