xxl-job/kubernetes/xxl-job-admin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: xxl-job-admin-svc
  namespace: iov-dev01
  labels:
    app: xxl-job-admin
spec:
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: xxl-job-admin
  sessionAffinity: None
  type: ClusterIP
